gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag4528.d
version https://git-lfs.github.com/spec/v1
oid sha256:9a22aa683bf9fb2257759d5db32f7fc630f1669e4da0d0b70b58d98c1981add0
size 775
